# bill_tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
lib/: FetchLibraries.cmake
resources/: bills.json  config.json  database.sql  global.json  settings.json
resources/debug_data/: bills.json  data.json
src/: CMakeLists.txt  CustomCommands.cmake  ExternalLibs.cmake  aboutDialog.cpp  addBillWidget.cpp  billTable.cpp  billTable.hpp  displayWindow.cpp  displayWindow.hpp  inputWindow.cpp  inputWindow.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  settingsWindow.cpp  settingsWindow.hpp  toolBar.cpp  toolBar.hpp
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  IDataAccessHandler.cpp  IDataAccessHandler.hpp  appConfig.cpp  appConfig.hpp  bill.cpp  bill.hpp  billDbHandler.cpp  billDbHandler.hpp  category.hpp  dataHandler.cpp  dataHandler.hpp  databaseAccessHandler.cpp  databaseAccessHandler.hpp  dateHandler.cpp  dateHandler.hpp  file.hpp  fileAccessHandler.cpp  fileAccessHandler.hpp  fileHandling.cpp  fileHandling.hpp  shop.hpp
src/lib/types/: bill.hpp  category.hpp  shop.hpp  usage.hpp
src/tools/: Files.cmake  aboutDialog.cpp  settingsWindow.cpp  toolBar.cpp
src/ui/: CMakeLists.txt  Files.cmake  aboutDialog.cpp  aboutDialog.hpp  addBillWidget.cpp  addBillWidget.hpp  application.cpp  application.hpp  billTable.cpp  billTable.hpp  displayWindow.cpp  displayWindow.hpp  mainWindow.cpp  mainWindow.hpp  overview.cpp  settingsWindow.cpp  settingsWindow.hpp  toolBar.cpp  toolBar.hpp  viewSelector.cpp  viewSelector.hpp
src/ui/models/: addBillModel.cpp  addBillModel.hpp  billTableModel.cpp  billTableModel.hpp  settingsModel.cpp  settingsModel.hpp
src/ui/views/: addBillView.cpp  addBillView.hpp  billTableView.cpp  billTableView.hpp  settingsView.cpp  settingsView.hpp
src/views/: CMakeLists.txt  Files.cmake  addBillWidget.cpp  billManager.cpp  billManager.hpp  billTable.cpp  billTable.hpp  billTableModel.cpp  billTableModel.hpp  overview.cpp  overview.hpp  statisticsView.cpp  statisticsView.hpp  viewSelector.cpp  viewSelector.hpp
tests/: CMakeLists.txt
